syntax = "proto3";
option java_multiple_files = true;
option java_package = "org.springframework.grpc.sample.proto";
option java_outer_classname = "HelloWorldProto";
service Simple {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}
message HelloRequest {
  optional string name = 1;
}
message HelloReply {
  optional string message = 1;
}